--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,19 @@
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@100;200;300;400;500;600;700&display=swap');
+@import "~slick-carousel/slick/slick.css"; 
+@import "~slick-carousel/slick/slick-theme.css";
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Work Sans', sans-serif;
+  scroll-behavior: smooth;
+}
+a {
+  color: #314584;
+  text-decoration: none;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +26,520 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.uppercase {
+  text-transform: uppercase;
+}
+nav .MuiInput-underline:before {
+  content: none!important;
+}
+nav .MuiInput-underline:after {
+  content: none!important;
+}
+.slick-arrow {
+  display: none!important;
+}
+
+.container {
+  max-width: 1300px;
+  width: 100%;
+  height: 100%;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+
+.btn-red {
+  width: 200px;
+  height: 55px;
+  background-color: #ff3946;
+  border-radius: 25px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 18px;
+  font-weight: 600;
+  color: #fff;
+  cursor: pointer;
+  border: none;
+}
+.btn-tran {
+  color: #314584;
+  cursor: pointer;
+  font-weight: 600;
+  font-size: 18px;
+}
+.title_text {
+  color: #314584;
+  font-size: 48px;
+  font-weight: 600;
+}
+.sub_text {
+  color: #ff3946;
+  font-size: 18px;
+  font-weight: 500;
+}
+.list {
+  display: flex;
+  list-style-type: none;
+  gap: 20px;
+}
+
+@media (max-width: 768px) {
+  .sub_text {
+    font-size: 16px;
+  }
+  .btn-red {
+    width: 150px;
+    font-size: 16px;
+  }
+  .btn-tran {
+    font-size: 16px;
+  }
+  .title_text {
+    font-size: 24px;
+  }
+  .list {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+/************/
+/************/
+/***NAVBAR***/
+/************/
+/************/
+
+
+nav {
+  height: 100px;
+  padding: 17px 0;
+  z-index: 1;
+  background: #fff;
+  box-shadow: 0 5px 5px 0px rgba(0,0,0,.3);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+}
+.nav-wrapper {
+  display: flex;
+  height: 66px;
+  margin: auto 0;
+  padding: 0 15px;
+}
+
+.nav-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  position: relative;
+}
+.nav__link a {
+  text-decoration: none;
+  font-size: 18px;
+  font-weight: 600;
+}
+.nav__contact {
+  font-size: 18px;
+  width: 200px;
+  height: 66px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 7px;
+  gap: 15px;
+  box-shadow: 0px 5px 10px 0 rgba(0,0,0,.7);
+  font-weight: 600;
+  color: #ff3a47;
+}
+.nav__group {
+  display: flex;
+  align-items: center;
+  gap: 30px;
+}
+.nav__logo {
+  width: 69px;
+  height: 30px;
+  position: absolute;
+  left: -120px;
+}
+@media (max-width: 1550px) {
+  .nav__logo {
+    position: relative;
+    left: 0;
+  }
+}
+.nav__logo img {
+  width: 100%;
+  height: 100%;
+}
+
+.nav__burger {
+  position: relative;
+  width: 30px;
+  height: 30px;
+  display: none;
+  align-items: center;
+}
+.nav__burger span {
+  display: block;
+  width: 100%;
+  height: 5px;
+  background-color: #ff3a47;
+  transition: 0.3s all ease;
+}
+.nav__burger:before {
+  content: '';
+  top: 0;
+  left: 0;
+  position: absolute;
+  width: 100%;
+  height: 5px;
+  background-color: #ff3a47;
+  transition: 0.3s all ease;
+}
+.nav__burger:after {
+  content: '';
+  bottom: 0;
+  left: 0;
+  position: absolute;
+  width: 100%;
+  height: 5px;
+  background-color: #ff3a47;
+  transition: 0.3s all ease;
+}
+nav.active .nav__burger span {
+  transform: scale(0);
+}
+nav.active .nav__burger:before {
+  top: 12px;
+  transform: rotate(-45deg);
+}
+nav.active .nav__burger:after {
+  bottom: 13px;
+  transform: rotate(45deg);
+}
+
+
+@media (max-width: 900px) {
+  nav {
+    height: 70px;
+  }
+  .nav-wrapper {
+    height: 40px;
+  }
+  .nav__contact {
+    display: none;
+  }
+}
+@media (max-width: 768px) {
+  .nav__logo {
+    left: 7px;
+  }
+  nav.active .nav__list {
+    top: 0;
+  }
+  nav.active::before {
+    opacity: 1;
+    top: 0;
+  }
+  .nav__burger {
+    display: flex;
+    z-index: 3;
+  }
+  nav {
+    height: 70px;
+    padding: 15px 0;
+  }
+  .nav-container {
+    position:unset;
+  }
+  .nav__link a {
+    font-size: 24px;
+  }
+  .nav__list {
+    position: absolute;
+    top: -100vh;
+    left: 50%;
+    transform: translate(-50%, 0);
+    gap: 50px;
+    transition: all 0.3s ease;
+    z-index: 2;
+    width: 100%;
+    background: white;
+    padding: 50px;
+  }
+  nav::before {
+    content: '';
+    position: absolute;
+    opacity: 0;
+    top: -120vh;
+    left: 0;
+    width: 120vw;
+    height: 120vh;
+    z-index: 1;
+    background-color: rgba(0,0,0,.7);
+    transition: opacity 0.3s ease-out;
+  }
+}
+
+
+
+
+/************/
+/************/
+/***TITLE****/
+/************/
+/************/
+
+.title {
+  position: relative;
+  z-index: 0;
+  padding-top: 150px;
+}
+
+.title__card {
+  display: flex;
+  position: relative;
+  height: 660px;
+  align-items: center;
+}
+.title__info {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  flex: 0 1 45%;
+}
+.title__info_title h3 {
+  font-size: 74px;
+  color: #314584;
+}
+.title__info_label p {
+  font-size: 18px;
+  color: #6e757a;
+}
+.title__info__btns {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+.title__img {
+  width: 680px;
+  height: 660px;
+  position: absolute;
+  right: 0;
+  z-index: -1;
+}
+.title__img img {
+  width: 100%;
+  height: 100%;
+}
+
+@media (max-width: 1280px) {
+  .title__card {
+    justify-content: center;
+  }
+  .title__img {
+    display: none;
+  }
+  .title__info {
+    flex: 100%;
+    align-items: center;
+    max-width: 60%;
+    text-align: center;
+  }
+  .title__info_label {
+    max-width: 60%;
+  }
+  .title__info__btns {
+    gap: 50px;
+  }
+}
+
+@media (max-width: 768px) {
+  .title {
+    padding-top: 140px;
+  }
+  .title__card {
+    
+    height: 100%;
+  }
+  .title__info {
+    max-width: 100%;
+    gap: 50px;
+  }
+  .title__info_title h3{
+    font-size: 40px;
+  }
+  .title__info_label {
+    max-width: 100%;
+  }
+  .title__info__btns {
+    gap: 20px;
+  }
+}
+
+
+
+
+/************/
+/************/
+/*PORTFOLIO**/
+/************/
+/************/
+
+.portfolio {
+  padding-top: 150px;
+}
+
+.portfolio-wrapper {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  text-align: left;
+  gap: 30px;
+}
+.portfolio_btn {
+  color: #ff3946;
+}
+.portfolio__title {
+  align-self: flex-start;
+}
+.portfolio__content {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 25px;
+}
+.portfolio__card {
+  width: 380px;
+  height: 280px;
+  background-color: gray;
+  flex: 1 1 auto;
+}
+
+
+@media (max-width: 768px) {
+  .portfolio__card {
+    width: 290px;
+  }
+  .portfolio__content {
+    gap: 15px;
+  }
+  .portfolio__title {
+    align-self: auto;
+    text-align: center;
+  }
+}
+
+
+
+
+
+/************/
+/************/
+/**CONTACT***/
+/************/
+/************/
+
+
+.contact {
+  padding-top: 100px;
+}
+.contact-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+.contact_form-group {
+  display: flex;
+  gap: 20px;
+  width: 100%;
+}
+.contact_input_root {
+  color: #314584;
+  width: 100%;
+}
+.contact_input_root label {
+  color: #314584;
+  font-weight: 500;
+  font-family: 'Work Sans', sans-serif;
+}
+.contact_input_root input {
+  color: #314584;
+}
+.contact_form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+}
+
+
+@media (max-width: 768px) {
+  .contact_form-group {
+    flex-direction: column;
+  }
+}
+
+
+
+/************/
+/************/
+/***FOOTER***/
+/************/
+/************/
+
+.footer {
+  margin-top: 100px;
+  background: #314584;
+}
+.footer-wrapper {
+  gap: 30px;
+  padding: 50px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+}
+.footer__sub {
+  color: #fff;
+}
+.footer__title {
+  color: #ff3946;
+}
+.footer__list li a {
+  color: #fff;
+}
+.footer__title {
+  font-size: 60px;
+}
+.footer__label {
+  font-size: 14px;
+  color: #fff;
+}
+.footer__socials {
+  display: flex;
+  gap: 50px;
+  align-items: center;
+}
+.footer__socials_item {
+  width: 40px;
+  height: 40px;
+}
+
+@media (max-width: 768px) {
+  .footer {
+    height: 100vh;
+  }
+  .footer__title {
+    font-size: 36px;
+    text-align: center;
+  }
+  .footer-wrapper {
+    padding: 100px 0;
+  }
 }
