--- a/src/index.css
+++ b/src/index.css
@@ -476,7 +476,9 @@ nav.active .nav__burger:after {
   align-items: center;
   gap: 20px;
 }
-
+.contact_form_submit {
+  margin-top: 30px;
+}
 
 @media (max-width: 768px) {
   .contact_form-group {
@@ -529,6 +531,9 @@ nav.active .nav__burger:after {
 .footer__socials_item {
   width: 40px;
   height: 40px;
+}
+.footer__socials_item {
+  height: 100%;
 }
 
 @media (max-width: 768px) {
