--- a/src/index.css
+++ b/src/index.css
@@ -532,7 +532,7 @@ nav.active .nav__burger:after {
   width: 40px;
   height: 40px;
 }
-.footer__socials_item {
+.footer__socials_item img {
   height: 100%;
 }
 
