--- a/src/index.css
+++ b/src/index.css
@@ -305,13 +305,15 @@ nav.active .nav__burger:after {
   display: flex;
   position: relative;
   height: 660px;
+  padding: 0 15px;
   align-items: center;
+  justify-content: space-evenly;
 }
 .title__info {
   display: flex;
+  max-width: 600px;
   flex-direction: column;
   gap: 20px;
-  flex: 0 1 45%;
 }
 .title__info_title h3 {
   font-size: 74px;
@@ -329,8 +331,6 @@ nav.active .nav__burger:after {
 .title__img {
   width: 680px;
   height: 660px;
-  position: absolute;
-  right: 0;
   z-index: -1;
 }
 .title__img img {
